--- a/views/main/menu.html
+++ b/views/main/menu.html
@@ -3,6 +3,7 @@
     <a id="btnXMIScriptDDD" class="easyui-linkbutton maction" data-options="iconCls: 'icon-edit',plain: true" data-manager="action:'>wizard/main/formXMIScriptDDD'">XMI > ScriptDDD</a>
     <a id="btnScriptApp" class="easyui-linkbutton maction" data-options="iconCls: 'icon-edit',plain: true" data-manager="action:'>wizard/main/formScriptStructure'">Script > App</a>
     <a id="btnScriptAppDDD" class="easyui-linkbutton maction" data-options="iconCls: 'icon-edit',plain: true" data-manager="action:'>wizard/main/formScriptDDDUpdate'">Script > AppDDD</a>
+    <a id="btnYAMLAppDDD" class="easyui-linkbutton maction" data-options="iconCls: 'icon-edit',plain: true" data-manager="action:'>wizard/main/formYAMLDDDUpdate'">YAML > AppDDD</a>
 </div>
 <script type="text/javascript">
     $(function () {
